--- a/src/coms/coms_ui/static/acquire_style.css
+++ b/src/coms/coms_ui/static/acquire_style.css
@@ -1,12 +1,17 @@
+/*HEADERS*/
+h4 bold{
+  font-weight: bold;
+  color: #5f9bef;
+}
 /*CONTAINERS*/
 #mainpanel{
-  height: 45vh;
+  height: 35vh;
   width: 84vw;
   /* TODO: Set min width  */
 }
 .images-container{
-  height: 48vh;
-  width: 84vw;
+  height: 58vh;
+  width: 100vw;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -14,18 +19,115 @@
 #enclosingjumbo .images-container{
   position: absolute;
   left: 0;
-  bottom: 45vh;
+  bottom: 35vh;
 }
 .acquire-container{
   border: 5px solid #003865;
   height: 100%;
-  width: 48vh;
-  min-width: 48vh;
+  width: 58vh;
+  min-width: 58vh;
   text-align: center;
 }
 .acquire-container p{
   vertical-align: middle;
-  line-height: 48vh;
+  line-height: 58vh;
   font-weight: bold;
   color: #003865;
+}
+#seq-panel{
+  padding-top: 0.5vh;
+  height: 35vh;
+  width: 16vw;
+  text-align: center;
+}
+#seq-panel h4{
+  position: absolute;
+  top: 40%
+}
+#enclosingjumbo #seq-panel{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+#seq-history-panel{
+  width: 16vw;
+  height: 29vh;
+  border: 2px solid #003865;
+  border-radius: 15px;
+  background-color: white;
+}
+#seq-panel #seq-history-panel{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.slider{
+  position: absolute;
+
+  top: -10px;
+  left: auto;
+
+}
+.acquire-container .slider{
+  text-align: left;
+  padding: 0;
+
+
+}
+/*HEADERS*/
+.voxsize{
+
+  font-size: 0.9rem;
+}
+/*ROWS AND COLS*/
+#contrast-col{
+  max-width: 25%;
+
+}
+#geometry-col{
+  max-width:75%;
+}
+#slselect-col{
+    max-width: 30%;
+}
+#voxelsize-col{
+  text-align: center;
+    max-width: 20%;
+}
+#NandFOV-col{
+    max-width: 65%;
+}
+/*DIALOGS*/
+#dialog{
+  display: none;
+}
+/*LISTS*/
+ul.no-bullet{
+  list-style-type: none;
+  padding-left: 0;
+}
+ul#seq-history-list{
+  list-style-type: none;
+  padding-left: 0;
+  text-align: center;
+  font-size: 20px;
+}
+/*IMAGES*/
+.square-img{
+  width: 100%;
+}
+/*INPUTS*/
+.TI-IRSE{
+  display: none;
+}
+.IRSE-checkbox{
+  display: none;
+}
+/*EFFECTS*/
+.blur {
+  -webkit-filter: blur(2.5px);
+  -moz-filter: blur(2.5px);
+  -o-filter: blur(2.5px);
+  -ms-filter: blur(2.5px);
+  filter: blur(2.5px);
 }
