--- a/src/coms/coms_ui/templates/acquire.html
+++ b/src/coms/coms_ui/templates/acquire.html
@@ -10,7 +10,7 @@
 
 
 <!--Author: Marina Manso-->
-<!--Date: 04/04/2019-->
+<!--Date: 04/12/2019-->
 <!--Version 0.0-->
 <!--Copyright of the Board of Trustees of  Columbia University in the City of New York-->
 <!--"""-->
@@ -21,13 +21,43 @@
   <meta charset="utf-8">
   <title>Standard Mode</title>
 
+
+  <!-- CDN-->
   <!--Bootstrap-->
+  <!--
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <!--CSS-->
+  <!--JQuery-->
+  <!--
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!--JQuery UI-->
+  <!--
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
+  <link href= "http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
+
+  <!--Manual links-->
+  <!--Bootstrap & JQuery-->
+  <link rel="stylesheet" href="../static/packages/Bootstrap/bootstrap.min.css">
+  <script  src="../static/packages/Bootstrap/jquery-3.3.1.slim.min.js"></script>
+  <script type="text/javascript" src="../static/packages/Bootstrap/popper.min.js"></script>
+  <script type="text/javascript" src="../static/packages/Bootstrap/bootstrap.min.js"></script>
+
+  <!--JQuery-->
+  <script type="text/javascript" src="../static/packages/jquery-3.3.1.min.js"></script>
+
+  <!--JQuery UI-->
+  <script type="text/javascript" src="../static/packages/jQuery-ui/jquery-ui.js"></script>
+  <link rel="stylesheet" href="../static/packages/jQuery-ui/jquery-ui.css">
+
+  <!--JavaScript customized funcitons-->
+  <script type="text/javascript" src="{{url_for('static',filename='acquire_func.js')}}"></script>
+  <script type="text/javascript" src="{{url_for('static',filename='form2Json.js')}}"></script>
+
+  <!--Customized CSS-->
   <link rel="stylesheet" href="{{url_for('static',filename='main_style.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='acquire_style.css')}}">
 
@@ -43,9 +73,13 @@
     <h1>Virtual MR Scanner - Standard Mode</h1>
 
     <!--Acquired images will be displayed in three views: axial, sagital and coronal-->
+
     <div class="images-container">
       <!--Axial-->
-      <div id="axial-container" class="container acquire-container">
+      <!--</input id="axial-slider" class="slider" type="range" min="1" max="4" value="0">-->
+      <div id="axial-container"  class="container acquire-container">
+
+
         <p>Axial View</p>
       </div>
 
@@ -60,15 +94,14 @@
       </div>
     </div>
 
-    <!-- TODO: name all the inputs -->
 
       <!--Main Panel-->
-      <div id="panel-container" class="container">
+    <div id="panel-container" class="container">
 
         <div id="mainpanel" class="jumbotron">
 
           <!--Navigation Bar-->
-          <nav>
+          <nav >
             <ul class="nav nav-tabs nav-fill">
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('on_register')}}">Register</a>
@@ -86,103 +119,259 @@
 
           <form id="seqparameters">
 
+            <input type="hidden" id="formId" name="formName" value="acq">
+            <input type="hidden" id="seq-id" name="selectedSeq">
             <div class="row">
 
               <!--Column 1: Sequence Contrast-->
-              <div class="col">
+              <div id="contrast-col" class="col">
 
                 <h2 id="first-row-item">Contrast</h2>
                 <div class="row">
 
                   <!--Column 1.1: Parameters: TR,TE,TI,FA-->
-                  <div class="col">
-                    <div class="row">
-
-                      <!--Column 1.1.1: TAGS (Parameters: TR,TE,TI,FA)-->
-                      <div class="col coltype1">
-                        <label>TR</label>
-                         <div class="w-100"></div>
-                        <label>TE</label>
-                         <div class="w-100"></div>
-                        <label>TI</label>
-                         <div class="w-100"></div>
-                        <label>Flip Angle</label>
-                      </div>
-
-                      <!--Column 1.1.2: INPUTS (Parameters: TR,TE,TI,FA)-->
-                      <div class="col coltype2">
-
-                        <label>
-                          <input id="TR" type="number" class="smallinput" name="TR">
-                        </label>
-                        <label>ms</label>
-
-                          <div class="w-100"></div>
-
-                        <label>
-                          <input id="TE" type="number" class="smallinput" name="TE">
-                        </label>
-                        <label>ms</label>
-
-                          <div class="w-100"></div>
-
-                        <label>
-                          <input id="TI" type="number"  class="smallinput" name="TI">
-                        </label>
-                        <label>ms</label>
-
-                          <div class="w-100"></div>
-
-                        <label>
-                          <input id="FA" type="number" class="smallinput" name="FA">
-                        </label>
-                        <label>deg</label>
-
-                      </div>
+                    <div class="col coltype1">
+                      <label class="IRSE-checkbox">IRSE</label>
+                        <div class="w-100"></div>
+                      <label>TR</label>
+                       <div class="w-100"></div>
+                      <label>TE</label>
+                       <div class="w-100"></div>
+                      <label class="TI-IRSE">TI</label>
+                       <div class="w-100"></div>
+                      <label>Flip Angle</label>
                     </div>
 
-                  </div>
+                    <!--Column 1.1.2: INPUTS (Parameters: TR,TE,TI,FA)-->
+                    <div class="col coltype2">
 
-                  <!--Column 1.2: Water/Fat supression-->
-                  <div class="col">
-                    <div class="row">
+                      <label class="radio-inline IRSE-checkbox">
+                        <input id="IRSE-check" type="checkbox" name="IRSE"  >
+                      </label>
 
-                      <!--Column 1.2.1: (TAGS) Water/Fat supression-->
-                      <div class="col coltype1">
-                        <label>Water Supression:</label>
-                          <div class="w-100"></div>
-                        <label>Fat Supression:</label>
-                      </div>
+                        <div class="w-100"></div>
 
-                      <div class="col coltype2">
-                        <label>
-                          <select id="watsup" class="selector" name="ws">
-                            <option value="no">None</option>
-                            <option value="yes">Yes</option>
-                          </select>
-                        </label>
+                      <label>
+                        <input id="TR" type="number" class="smallinput" name="TR">
+                      </label>
+                      <label>ms</label>
 
-                          <div class="w-100"></div>
+                        <div class="w-100"></div>
 
-                        <label>
-                          <select id="fatsup" class="selector" name="fs">
-                            <option value="no">None</option>
-                            <option value="yes">Yes</option>
-                          </select>
-                        </label>
+                      <label>
+                        <input id="TE" type="number" class="smallinput" name="TE">
+                      </label>
+                      <label>ms</label>
 
-                      </div>
+                        <div class="w-100"></div>
+
+                      <label class="TI-IRSE">
+                        <input id="TI" type="number"  class="smallinput TI-IRSE" name="TI">
+                      </label>
+                      <label class="TI-IRSE">ms</label>
+
+                        <div class="w-100"></div>
+
+                      <label>
+                        <input id="FA" type="number" class="smallinput" name="FA">
+                      </label>
+                      <label>deg</label>
+
                     </div>
-                  </div>
 
                 </div>
 
               </div>
 
               <!--Column 2: Sequence Geometry-->
-              <div class="col">
+              <div id="geometry-col" class="col">
 
                 <h2 id="first-row-item">Geometry</h2>
+
+
+
+
+                  <div class="row">
+                    <!--Column 2.1: Slice selection-->
+                    <div id="slselect-col" class="col">
+                      <h3>Slice Selection</h3>
+                      <div class="row">
+                        <!--Column 2.1.1: Tags slice selection parameters -->
+                        <div class="col coltype1">
+                          <label>Orientation</label>
+                            <div class="w-100"></div>
+                          <label>Thickness</label>
+                            <div class="w-100"></div>
+                          <label>Slices</label>
+                            <div class="w-100"></div>
+                          <label>Gap</label>
+                        </div>
+
+                        <!--Column 2.1.2: Fields slice selection parameters -->
+                        <div class="col coltype2 ">
+                          <label>
+                            <select class="selector" name="sl-orient">
+                              <option value="axial">Axial</option>
+                              <option value="sagital">Sagital</option>
+                              <option value="coronal">Coronal</option>
+                            </select>
+                          </label>
+
+                            <div class="w-100"></div>
+
+                          <label>
+                            <input id="thickness" type="number" class="smallinput" name="thck" >
+                          </label>
+                          <label>mm</label>
+
+                            <div class="w-100"></div>
+
+                          <label>
+                            <input id="slices" type="number" class="smallinput" name="slicenum">
+                          </label>
+
+                            <div class="w-100"></div>
+
+                          <!-- TODO: Light gray disabled box -->
+                          <label>
+                            <input id="sl-gap" type="number"  class="smallinput"  name="slicegap" disabled>
+                          </label>
+                          <!-- TODO: Decide on % or mm -->
+                          <!--<label>%</label>-->
+
+                        </div>
+                      </div>
+
+                    </div>
+
+                    <!--Column 2.2: Spatial Encoding-->
+                    <div class="col">
+                      <h3>Spatial Encoding</h3>
+
+                      <div  class="row">
+
+                        <div class="col">
+                          <div class="row">
+                            <!--Column 2.2.1: tags-->
+                            <div  class="col coltype1">
+
+                                <label>Frequency</label>
+
+                                  <div class="w-100"></div>
+
+                                <label>Phase</label>
+
+                                  <div class="w-100"></div>
+
+                                <label>ADC BW</label>
+
+                            </div>
+
+                            <!--Column 2.2.1: fields-->
+                            <div class="col coltype2">
+
+                              <label>
+                                <select id="freq" class="selector" name="freq">
+                                  <option value="x">x</option>
+                                  <option value="y">y</option>
+                                  <option value="z">z</option>
+                                </select>
+                              </label>
+
+                                <div class="w-100"></div>
+
+                              <label>
+                                <select id="phase" class="selector" name="ph">
+                                  <option value="x">x</option>
+                                  <option value="y">y</option>
+                                  <option value="z">z</option>
+                                </select>
+                              </label>
+
+                              <div class="w-100"></div>
+
+                              <label>
+                                <input type="number" class="smallest-input" name="bw">
+                              </label>
+                              <label>kHz</label>
+
+                            </div>
+                          </div>
+
+
+                        </div>
+                        <!--Column 2.3: N and FOV-->
+                        <div  id="NandFOV-col" class="col">
+                          <div class="row">
+                            <!--Column 2.3.1: N-->
+                            <div class="col coltype1">
+
+                              <label>N</label>
+
+                                <div class="w-100"></div>
+
+                              <label>
+                                <input  id="Nx" type="number" class="smallest-input" name="Nx" >
+                              </label>
+
+                                <div class="w-100"></div>
+
+                              <label>
+                                <input  id="Ny" type="number" class="smallest-input"  name="Ny">
+                              </label>
+
+                            </div>
+
+                            <!--Column 2.3.1: FOV-->
+                            <div class="col coltype2">
+
+                              <label>FOV</label>
+
+                                <div class="w-100"></div>
+
+                              <label>
+                                <input  id="FOVx" type="number" class="smallest-input" name="FOVx">
+                              </label>
+                              <label>mm</label>
+
+                                <div class="w-100"></div>
+
+                              <label>
+                                <input  id="FOVy" type="number" class="smallest-input" name="FOVy">
+                              </label>
+                              <label>mm</label>
+
+                            </div>
+
+                          </div>
+                        </div>
+
+
+                      </div>
+
+                    </div>
+
+                    <div id="voxelsize-col" class="col">
+                      <p></p>
+                      <h4>Voxel Size:</h4>
+                      <div class="voxsize">
+                        <label>x: <span id="vsx">0</span> mm</label>
+
+                          <div class="w-100"></div>
+
+                        <label>y: <span id="vsy">0</span> mm</label>
+
+                          <div class="w-100"></div>
+
+                        <label>z: <span id="thick">0</span> mm</label>
+                      </div>
+                    </div>
+
+
+
+
+
+                  </div>
 
               </div>
 
@@ -194,7 +383,21 @@
 
       </div> <!--Panel container-->
 
-      <!--<div class="row">
+    <div id="seq-panel" class="container">
+      <button id="addseq-btn" type="button" class="btn btn-primary">+</button>
+      <button type="button" class="btn btn-primary submit-form-btn">Run Exam</button>
+      <!-- TODO: get panel being able to scroll down -->
+      <div id="seq-history-panel" class="container">
+        <div id="select-seq-sentence" >
+          <h4>Please select a sequence using the <bold>+ button</bold>.</h4>
+        </div>
+        <ul id="seq-history-list" class="no-bullet">
+
+        </ul>
+      </div>
+
+    </div>
+    <!--<div class="row">
 
         <div class="col">
 
@@ -236,6 +439,15 @@
 
   </div> <!-- Enclosing panel-->
 
+  <!--Dialog to be opened to add a new sequence-->
+  <!-- TODO: style the links  -->
+  <div id="dialog" title="Select a sequence:">
+    <ul class="menu no-bullet">
+      <li><a class="menu-item" href = "#">Localizer</a></li>
+      <li ><a class="menu-item" href = "#">GRE</a></li>
+      <li ><a class="menu-item" href = "#">SE</a></li>
+    </ul>
+  </div>
 </body>
 
 </html>
